* Increased face image size on about page while on mobile * Prevented text wrapping on blog subscription * Fixed footer display on mobile

--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -32,7 +32,7 @@ div#intro {
 @media only screen and (max-width: 480pt) {
   div#intro > img {
 	float: none;
-	width: 45%;
+	width: 60%;
 	margin: 0 auto 0 auto;
   }
 }
